Serializer changes, vector changes, components utils changes