@@ -1,11 +1,14 @@
 package com.gitlab.aecsocket.minecommons.core.vector.cartesian;
 
+import java.text.DecimalFormat;
+import java.util.Locale;
+
 /**
  * An immutable (x, y) integer value pair, using the Cartesian coordinate system.
  * @param x The X component.
  * @param y The Y component.
  */
-public record Point2(int x, int y) {
+public record Point2(int x, int y) implements NumericalVector {
     /** An instance with all fields set to 0. */
     public static final Point2 ZERO = point2(0);
 
@@ -48,5 +51,15 @@ public record Point2(int x, int y) {
      */
     public Vector2 vector() { return new Vector2(x, y); }
 
-    @Override public String toString() { return "(%d, %d)".formatted(x, y); }
+    @Override
+    public String asString(DecimalFormat format) {
+        return "%s, %s".formatted(format.format(x), format.format(y));
+    }
+
+    @Override
+    public String asString(Locale locale, String format) {
+        return String.format(locale, format, x, y);
+    }
+
+    @Override public String toString() { return asString(DEFAULT_FORMAT); }
 }
